--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -18,6 +18,8 @@
       -ms-text-size-adjust: 100%;
       -webkit-text-size-adjust: 100%;
       text-rendering: optimizeLegibility;
+      overflow: hidden;
+
   }
 
   #___gatsby {
